feat: add pin configuration for Arduino Mega and refactor ACController and DisplayManager to use defined pins

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,12 @@
 platform = atmelavr
 board = uno
 framework = arduino
+monitor_speed = 9600
+
+[env:mega2560]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+monitor_speed = 9600
 lib_deps = 
 	smougenot/TM1637@0.0.0-alpha+sha.9486982048
